# pseudo

./: .dir-locals.el  pseudo.cabal
app/: Main.hs
cbits/: fork_exec_with_pty.c  fork_exec_with_pty.h
src/: Client.hs  Lib.hs  Message.hs  Pty.hs  Server.hs
src/Boot/: Client.hs  Server.hs  Transport.hs
src/Protolude/: Extended.hs
test/: LibProp.hs  MessageProp.hs  Spec.hs
